--- a/index.html
+++ b/index.html
@@ -149,7 +149,7 @@
 
     <!-- Testimonials section removed -->
 
-   <section class="contact" id="contact">
+  <section class="contact" id="contact">
   <div class="container">
     <h2 class="section-title">Contact Us</h2>
     <div class="contact-content">
@@ -169,7 +169,26 @@
             <h3>Email</h3>
             <p>
               <a href="mailto:glassarch.helpdesk@gmail.com">binodsingh9971@gmail.com</a><br/>
-               <p>Support: <a href="mailto:glassarch.helpdesk@gmail.com">glassarch.helpdesk@gmail.com</a></p>
+              <p>Support: <a href="mailto:glassarch.helpdesk@gmail.com">glassarch.helpdesk@gmail.com</a></p>
+            </p>
+          </div>
+        </div>
+
+        <!-- ✅ Instagram Added Below Email -->
+        <div class="contact-item">
+          <div class="contact-icon">
+            <img 
+              src="https://cdn.jsdelivr.net/npm/simple-icons@v9/icons/instagram.svg" 
+              width="22" 
+              alt="Instagram"
+            />
+          </div>
+          <div>
+            <h3>Instagram</h3>
+            <p>
+              <a href="https://instagram.com/glassarchofficial" target="_blank">
+                @glassarchofficial
+              </a>
             </p>
           </div>
         </div>
@@ -192,6 +211,7 @@
     </div>
   </div>
 </section>
+
 
 
     <footer class="footer">
